infra/k8s/app/overlays/dev/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: realestate-dev
  labels:
    app.kubernetes.io/part-of: realestate
    environment: dev
